# wasm-gen-py

./: .gitignore  .pre-commit-config.yaml  README.md  README.md.license  REUSE.toml  justfile  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
docs/: api.rst  conf.py  example_oberon_0.rst  example_wasi.rst  examples.rst  index.rst
examples/: example_oberon_0.py  example_wasi.py
src/wasm_gen/: __init__.py  __init__.pyi  core.py  data.py  exports.py  function.py  globals.py  imports.py  instructions.py  memory.py  module.py  type.py  values.py
tests/: test_42.py  test_add.py  test_values.py  test_wasi.py
wasm_gen/: __init__.py  core.py  data.py  exports.py  function.py  globals.py  imports.py  instructions.py  memory.py  module.py  type.py  values.py  values_test.py
wasm_gen/tests/: test_42.py  test_add.py  test_oberon0.py  test_values.py  test_wasi.py
